--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         class="flex"
       >
         <img
-          src="./"D:\桌面\193804pmucYQBUTgi37sgr.png" "
+          src=".\193804pmucYQBUTgi37sgr.png" 
           width="80px"
           height="80px"
           alt=""
