--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         class="flex"
       >
         <img
-          src="https://tupian.qqw21.com/article/UploadPic/2020-9/202091521495395987.jpg" 
+          src="./193804pmucYQBUTgi37sgr.png "
           width="80px"
           height="80px"
           alt=""
