--- a/index.html
+++ b/index.html
@@ -82,12 +82,7 @@
         "
         class="flex"
       >
-        <img
-          src="./193804pmucYQBUTgi37sgr.png "
-          width="80px"
-          height="80px"
-          alt=""
-        />
+        <img src="./picture.png " width="80px" height="80px" alt="" />
         <div style="margin-left: 10px">何明月</div>
       </div>
       <!--导航栏-->
